tweaks per review

--- a/src/styles/components/_agency-picker.scss
+++ b/src/styles/components/_agency-picker.scss
@@ -29,7 +29,7 @@ $usa-btn-big-width:     4.5rem;
 .usa-agency-picker-autocomplete{
   position:absolute;
   top:44px;
-  background:#fff;
+  background:$color-white;
   margin-top:0;
   margin-left: 0;
   margin-right: 0;
