--- a/src/styles/components/_collapsible.scss
+++ b/src/styles/components/_collapsible.scss
@@ -1,15 +1,10 @@
-div.collapsible {
-  border: 1px solid;
-}
 
 div.collapsible div.collapsible-header {
   clear: both;
   margin: 0;
   padding: 1.5rem;
   width: 100%;
-}
-div.collapsible div.collapsible-header.bottomBorder {
-  border-bottom: 1px solid;
+  background-color: $color-gray-lightest;
 }
 div.collapsible div.collapsible-header .label {
   color: $color-base;
@@ -19,9 +14,6 @@ div.collapsible div.collapsible-header .expand-hide {
   float: right;
 }
 
-div.collapsible div.collapsible-content {
-  padding: 1.5rem;
-}
 div.collapsible div.collapsible-content.closed {
   display: none;
 }
