--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -52,6 +52,7 @@
 @import 'pages/help-roadmap';
 @import 'pages/users-directory';
 @import 'pages/ui-kit-demo';
+@import 'pages/access';
 
 html, body{
   height: 100%;
