--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -317,17 +317,17 @@
   <div class="usa-grid">
     <div class="usa-width-one-whole">
       <h2>Agency picker &lt;agencyPicker&gt;</h2>
-      <agencyPicker [hint]="'Please select one or more organization filters'" [label]="'Filter by Organization(s):'" [multimode]="true"></agencyPicker>
-      <agencyPicker [hint]="'Please select one organization'" [label]="'Filter by Organization:'" [multimode]="false"></agencyPicker>
-      <agencyPicker [orgRoot]="100006688" [hint]="'Please select one or more organization filters under GSA'" [label]="'Filter by Organization(s):'" [multimode]="true"></agencyPicker>
     </div>
+    <div class="usa-width-one-third"><agencyPicker [hint]="'Please select one or more organization filters'" [label]="'Filter by Organization(s):'" [multimode]="true"></agencyPicker></div>
+    <div class="usa-width-one-third"><agencyPicker [hint]="'Please select one organization'" [label]="'Filter by Organization:'" [multimode]="false"></agencyPicker></div>
+    <div class="usa-width-one-third"><agencyPicker [orgRoot]="100006688" [hint]="'Please select one or more organization filters under GSA'" [label]="'Filter by Organization(s):'" [multimode]="true"></agencyPicker></div>
   </div>
 
   <div class="usa-grid">
     <h2 class="usa-width-one">Phone Entry &lt;samPhoneEntry&gt;</h2>
     <div class="usa-width-one-third">
       <samPhoneEntry [(model)]="phoneModel" (emitter)="phoneModelChange($event)"></samPhoneEntry>
-      <samPhoneEntry [(model)]="phoneModel2" (emitter)="phoneModelChange($event)"></samPhoneEntry>
+      <samPhoneEntry [phoneNumberTemplate]="phoneTemplate2" [(model)]="phoneModel2" (emitter)="phoneModelChange($event)"></samPhoneEntry>
     </div>
     <div class="usa-width-one-third">
       <h3>Model</h3>
