--- a/src/app/authentication/shared/password/password.component.html
+++ b/src/app/authentication/shared/password/password.component.html
@@ -39,8 +39,8 @@
           <ul>
             <li class="header">Passwords must:</li>
             <li>
-              <div class="icon"><span class="fa" [ngClass]="$formState(states.validations.minLength)"></span></div>
-              <span [innerHTML]="config.messages.minLength"></span>
+              <div class="icon"><span class="fa" [ngClass]="$formState(states.validations.minlength)"></span></div>
+              <span [innerHTML]="config.messages.minlength"></span>
             </li>
             <li>
               <div class="icon"><span class="fa" [ngClass]="$formState(states.validations.uppercase)"></span></div>
