- Made verbiage changes for deactivation section

--- a/src/app/authentication/profile/details/details.component.html
+++ b/src/app/authentication/profile/details/details.component.html
@@ -89,10 +89,11 @@
       <samButton buttonType="default" buttonClass="usa-save" buttonText="Save" (click)="save('kba')"></samButton>
     </section>
     <section>
-      <h3>Delete Account</h3>
+      <h3>Deactivate Account</h3>
       <div>
-        Once you delete your account, you will not be able to recover any of your account information or permissions.<br />
-        All your My Access information will permanently be deleted.
+        Once you deactivate your account, you will not be able to recover any of your account information or permissions.
+        Once you delete your account, you will not be able to recover any of your account information or permissions.<br /><br />
+        Your account will be permanently inaccessible and you will need to re-register to access SAM.gov.
       </div>
       <samButton buttonType="secondary" buttonText="Deactivate Account" (click)="confirmDeactivation()"></samButton>
     </section>
