Add in expire alert function

--- a/src/styles/components/alert/_item.scss
+++ b/src/styles/components/alert/_item.scss
@@ -25,7 +25,21 @@
     }
   }
 
+  .abs-top-right{
+    position: absolute;
+    right: 20%;
+    top: -10px;
+  }
 
+  .expire-alert-note{
+    width: 47%;
+    border: 1px solid $color-black;
+    padding: 3px 5px;
+  }
+
+  .gray-label{
+    color: $color-gray-light;
+  }
 }
 
 alert-item {
