added a numbers only input option for the model

--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -328,6 +328,7 @@
     <div class="usa-width-one-third">
       <samPhoneEntry [(model)]="phoneModel" (emitter)="phoneModelChange($event)"></samPhoneEntry>
       <samPhoneEntry [phoneNumberTemplate]="phoneTemplate2" [(model)]="phoneModel2" (emitter)="phoneModelChange($event)"></samPhoneEntry>
+      <samPhoneEntry [phoneNumberTemplate]="phoneTemplate3" [numbersOnly]="true" [(model)]="phoneModel3" (emitter)="phoneModelChange($event)"></samPhoneEntry>
     </div>
     <div class="usa-width-one-third">
       <h3>Model</h3>
