Created margin label directive
Created a directive to be applied only to elements with transcluded
children. Should only be used when the need to remove top margin for
the label is impossible with normal CSS because of quirks with the
Shadow DOM.

--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -3,6 +3,7 @@
 // Vendor main
 @import '~font-awesome/scss/font-awesome';
 @import '~uswds/src/stylesheets/lib/bourbon';
+@import '~uswds/src/stylesheets/lib/neat';
 
 // Internal variable should be declared before uswds variable to take higher precendence
 @import 'variables';
@@ -120,6 +121,10 @@ h2{
 
 .usa-sidenav-list > li{
   border-top: 1px solid #f1f1f1;
+}
+
+.usa-offset-one-fourth {
+  @include shift(3 of 12);
 }
 
 // Make sidenav use all availabe horizontal space on medium screen
