--- a/src/app/app-components/search-layout/search-layout.template.html
+++ b/src/app/app-components/search-layout/search-layout.template.html
@@ -1,29 +1,41 @@
-<div class="usa-grid search-layout">
-	<aside class="usa-width-one-fourth">
-		<sam-filters-container>
-			<ng-content select="[search-sidebar]"></ng-content>
-		</sam-filters-container>
-	</aside>
-	<div class="usa-width-three-fourths" >
+<style>
+ aside.hidden {
+	 display: none;
+ }
+</style>
+
+<div class="usa-grid">
+	<header class="usa-width-one-whole" [ngClass]="setOffset()">
 		<ng-content select="[search-title]"></ng-content>
-		<ng-content select="[search-featured-result]"></ng-content>
-		<div class="usa-grid-full">
-			<div class="usa-width-three-fourths">
-				<p class="showing-results-meta usa-color-text usa-color-text-gray">
-					Page {{currentPage}} of {{totalElements}} results
-				</p>
+	</header>
+	<main>
+		<aside [ngClass]="setAsideWidth()">
+			<sam-filters-container reset-label-margin=".5rem">
+				<ng-content select="[search-sidebar]"></ng-content>
+			</sam-filters-container>
+		</aside>
+		<div [ngClass]="setMainWidth()">
+			<ng-content select="[search-featured-result]"></ng-content>
+			<div class="usa-grid-full">
+				<div class="usa-width-three-fourths">
+					<button type="button" class="usa-button-link" (click)="toggleFilters(this)"><i [ngClass]="toggleFilterLabel()"></i>&nbsp;Filters</button>
+					<p class="showing-results-meta usa-color-text usa-color-text-gray">
+						{{totalElements}} results
+					</p>
+				</div>
+				<div class="usa-width-one-fourth">
+					<samSelect [(model)]="sortModel" 
+										[name]="sortConfig.name"
+										[options]="sortConfig.options"
+										[label]="sortConfig.label"
+										reset-label-margin>
+					</samSelect>
+				</div>
 			</div>
-			<div class="usa-width-one-fourth">
-				<samSelect [(model)]="sortModel" [name]="sortConfig.name"
-				[options]="sortConfig.options"
-				[label]="sortConfig.label"></samSelect>
+			<ng-content select="[search-content]"></ng-content>
+			<div>
+				<samPagination (pageChange)="pageChangeHandler($event)" [currentPage]="currentPage" [totalPages]="totalPages"></samPagination>
 			</div>
 		</div>
-		<ng-content select="[search-content]"></ng-content>
-		<div>
-			<div><!-- *ngIf="data.results">-->
-	      <samPagination (pageChange)="pageChangeHandler($event)" [currentPage]="currentPage" [totalPages]="totalPages"></samPagination>
-		  </div>
-		</div>
-	</div>
+	</main>
 </div>
