--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -53,6 +53,7 @@
 @import 'pages/users-directory';
 @import 'pages/ui-kit-demo';
 @import 'pages/access';
+@import 'pages/public-profile';
 
 html, body{
   height: 100%;
