--- a/src/app/organization/organization.page.html
+++ b/src/app/organization/organization.page.html
@@ -11,7 +11,7 @@
         <h1>{{organization.agencyName || organization.name || organization.orgKey}} {{(organization.shortName == '' || organization.shortName == null) ?  '': '('+organization.shortName+')'}}</h1>
 
         <section>
-          <strong>{{(organization | organizationTypeCode).label}}</strong>
+          <strong>{{(organization | organizationTypeCode).label}}</strong> {{(organization | organizationTypeCode).value}}
           <span class="divider">&nbsp;|&nbsp;</span>
 
           <span class="inactive" *ngIf="isModActive() == false">
