Adding bottom margin to LIs

--- a/src/styles/pages/_wage-determination.scss
+++ b/src/styles/pages/_wage-determination.scss
@@ -8,9 +8,13 @@
     max-width: 100%;
     height: 700px;
     margin-top: 20px;
+    margin-bottom: 20px;
     font-family: 'Courier New', Courier, monospace;
   }
   
+  .usa-unstyled-list li{
+    margin-bottom: 5px;
+  }
   /* MISC */
   /*============================*/
   samsidenav{
