remove debug stuff

--- a/src/app/users/public/access/access.template.html
+++ b/src/app/users/public/access/access.template.html
@@ -12,7 +12,7 @@
         <a class="usa-button usa-button-transparent pull-right underline" *ngIf="firstRole && showCollapse" (click)="collapseAll()">Collapsed All</a>
         <a class="usa-button usa-button-transparent pull-right underline" *ngIf="firstRole && !showCollapse" (click)="expandAll()">Expand All</a>
       </h2>
-      <samAccordion *ngFor="let domain of role.roleData | groupByDomain" [bordered]="true">
+      <samAccordion *ngFor="let domain of role.roleData | groupByDomain" [bordered]="true" [expandIndex]="showCollapse ? 0 : -1">
         <samAccordionSection [headerText]="domain.val" [name]="'domain-'+domain.val">
           <div class="usa-grid-full permissions-table-header">
             <div class="usa-width-one-sixth"><strong>Organization:</strong></div>
@@ -22,33 +22,30 @@
             <div class="usa-width-one-sixth">&nbsp;</div>
           </div>
           <ng-container *ngFor="let org of domain.organizations">
-            <ng-container *ngFor="let func of org.functionMapContent; let firstFunction = first">
-              <div class="usa-grid-full permissions-table-row" [class.first-function]="firstFunction">
-                <div class="usa-width-one-sixth org-col access-cell">
-                  <span *ngIf="firstFunction">
-                    <a [routerLink]="['/organization', org.orgKey.trim()]">{{orgName(org.orgKey)}}</a>
-                  </span>
-                </div>
-                <div class="usa-width-one-sixth org-level-col access-cell">{{firstFunction ? orgLevel(org.orgKey) : ''}}&nbsp;</div>
-                <div class="usa-width-one-half background-grey access-cell">
-                  <div class="usa-grid-full grey-group">
-                    <div class="pip-left" *ngIf="firstFunction">&nbsp;</div>
+            <div class="usa-grid-full permissions-table-row">
+              <div class="usa-width-one-sixth org-col access-cell">
+                <a [routerLink]="['/organization', org.orgKey.trim()]">{{orgName(org.orgKey)}}</a>
+              </div>
+              <div class="usa-width-one-sixth org-level-col access-cell">{{orgLevel(org.orgKey)}}&nbsp;</div>
+              <div class="usa-width-one-half functions-col background-grey access-cell">
+                <div class="pip-left">&nbsp;</div>
+                <ng-container *ngFor="let func of org.functionMapContent">
+                  <div class="usa-grid-full functions-row">
                     <div class="usa-width-one-third object-col">{{func.function.val | capitalize}}</div>
                     <div class="usa-width-two-thirds permissions-col">
                       <span class="pull-left" *ngFor="let perm of func.permission">{{perm.val | capitalize}},&nbsp;</span>
-                      &nbsp;
                     </div>
                   </div>
-                </div>
-                <div class="usa-width-one-sixth">
-                  <span class="pull-right" *ngIf="firstFunction">
-                    <button class="usa-button-transparent m_0 row-action-button"><i class="fa fa-pencil"></i></button>
-                    &nbsp;
-                    <button class="usa-button-transparent m_0 row-action-button"><i class="fa fa-trash"></i></button>
-                  </span>
-                </div>
+                </ng-container>
               </div>
-            </ng-container>
+              <div class="usa-width-one-sixth">
+                <span class="pull-right">
+                  <button class="usa-button-transparent m_0 row-action-button"><i class="fa fa-pencil"></i></button>
+                  &nbsp;
+                  <button class="usa-button-transparent m_0 row-action-button"><i class="fa fa-trash"></i></button>
+                </span>
+              </div>
+            </div>
           </ng-container>
         </samAccordionSection>
       </samAccordion>
